Fix layout issues

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -28,6 +28,15 @@ body {
   }
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-wrap: pretty;
+}
+
 ul {
   padding-inline-start: var(--spacing-lg);
   -webkit-columns: 2;
